src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


:root {
  --topbar-height: 200px;
}

*{
  scrollbar-width: none;
}


.sidebar-section {
  @apply py-0 list-none py-3 relative after:block after:h-px after:opacity-50 after:bg-[#797575] after:w-full after:absolute after:bottom-0 after:left-0 sm:py-1 lg:py-3
}



.sidebar-section li a {
  @apply text-white flex flex-row gap-5 py-2 hover:bg-[#3d3a3a] rounded-sm px-0.5 sm:flex-col sm:gap-0 sm:items-center lg:flex-row lg:gap-5 
}


.settings-group {
  @apply list-none text-white capitalize flex flex-col gap-10;
}

.settings-group li {
  @apply flex flex-row justify-between 
}

/* .settings-group li input[type = ] */


.signin-form, .upload-form {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 90%;
  
}


.signin-form input,
.upload-form input {
  width: 100%;
  outline: none;
  border: 1px solid white;
  background-color: transparent;
  height: 30px;
  padding: 8px;
  border-radius: 5px;
}

.signin-form>div,
.upload-form>div {
  display: flex;
  flex-direction: column;
}

.signin-form label,
.upload-form label {
  text-transform: capitalize;
  font-size: .8rem;
}


.active-tab {
  @apply  after:block after:h-0.5 after:opacity-50 after:bg-red-900 after:w-full after:absolute after:bottom-0 after:left-0
}

.alt-signin-icon {
  @apply bg-[#202020] p-2 gap-1 rounded-xl 
}




.upload-status-percent{
  
}

